@@ -101,6 +101,14 @@ class RDoc::RDoc
   end
 
   ##
+  # Resets all internal state
+
+  def self.reset
+    RDoc::TopLevel.reset
+    RDoc::Parser::C.reset
+  end
+
+  ##
   # Creates a new RDoc::RDoc instance.  Call #document to parse files and
   # generate documentation.
 
@@ -400,8 +408,7 @@ The internal error was:
   # current directory, so make sure you're somewhere writable before invoking.
 
   def document options
-    RDoc::TopLevel.reset
-    RDoc::Parser::C.reset
+    RDoc::RDoc.reset
 
     if RDoc::Options === options then
       @options = options
